Fix crash in extension installed bubble.

BUG=606251

Review URL: https://codereview.chromium.org/1921153002

Cr-Commit-Position: refs/heads/master@{#389654}

Former-commit-id: dc0b4da600b1b35903411b5c909bb1aed135e3e9